<?xml version="1.0"?>
<package format="2">
  <name>hydra_demos</name>
  <version>0.0.0</version>
  <description>The hydra_demos package</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>bio_ik</depend>
  <depend>descartes_core</depend>  
  <depend>descartes_moveit</depend>
  <depend>descartes_trajectory</depend>
  <depend>descartes_planner</depend>
  <depend>descartes_utilities</depend>
  <depend>trajectory_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>gcode_core</depend>
</package>